force-app/main/default/objects/Survey_Responses__c/Survey_Responses__c.object-meta.xml
<CustomObject>
    <description>Every new client receives this survey after their first payroll</description>
    <label>First Payroll Survey</label>
    <nameField>
        <displayFormat>SUR-{0000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>First Payroll Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>