force-app/main/default/objects/Survey_Responses__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>New Account after receiving their first payroll</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>First_Payroll_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>