force-app/main/default/objects/Survey_Responses__c/fields/Additional_info_on_improving__c.field-meta.xml
<CustomField>
    <fullName>Additional_info_on_improving__c</fullName>
    <label>Additional info on improving</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>