force-app/main/default/objects/Survey_Responses__c/fields/Areas_where_we_could_be_better__c.field-meta.xml
<CustomField>
    <fullName>Areas_where_we_could_be_better__c</fullName>
    <label>Areas where we could be better</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team Members</fullName>
            </value>
            <value>
                <fullName>Sales Process</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>