force-app/main/default/objects/Survey_Responses__c/fields/Can_we_share_on_line__c.field-meta.xml
<CustomField>
    <fullName>Can_we_share_on_line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>They gave us a 5</description>
    <label>Can we share on-line</label>
    <type>Checkbox</type>
</CustomField>