force-app/main/default/objects/Survey_Responses__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact survey was sent to</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>First_Payroll_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>