force-app/main/default/objects/Survey_Responses__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, it indicates that follow-up with client is required.</inlineHelpText>
    <label>Follow Up Required?</label>
    <type>Checkbox</type>
</CustomField>