force-app/main/default/objects/Survey_Responses__c/fields/How_do_we_move_from_4_to_5__c.field-meta.xml
<CustomField>
    <fullName>How_do_we_move_from_4_to_5__c</fullName>
    <description>They gave us a 4 and we are asking for detail</description>
    <label>How do we move from 4 to 5</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>