force-app/main/default/objects/Survey_Responses__c/fields/New_Client_Satifaction__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Satifaction__c</fullName>
    <description>1-5 stars</description>
    <label>New Client Satifaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>