force-app/main/default/objects/Survey_Responses__c/fields/Respondent_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondent_s_Last_Name__c</fullName>
    <label>Respondent&apos;s Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>