force-app/main/default/objects/Survey_Responses__c/fields/Respondent_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Respondent_s_Phone__c</fullName>
    <inlineHelpText>Phone number of the person filling out the survey.</inlineHelpText>
    <label>Respondent&apos;s Phone</label>
    <type>Phone</type>
</CustomField>