force-app/main/default/objects/Survey_Responses__c/fields/Respondents_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondents_First_Name__c</fullName>
    <label>Respondent&apos;s First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>