force-app/main/default/objects/Survey_Responses__c/fields/Survery_Name__c.field-meta.xml
<CustomField>
    <fullName>Survery_Name__c</fullName>
    <label>Survery Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>