force-app/main/default/objects/Survey_Responses__c/fields/Survey_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completion_Time__c</fullName>
    <inlineHelpText>Time survey was completed.</inlineHelpText>
    <label>Survey Completion Time</label>
    <type>DateTime</type>
</CustomField>