force-app/main/default/objects/Survey_Responses__c/fields/Survey_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Start_Time__c</fullName>
    <description>What time did the client client start the survey</description>
    <label>Survey Start Time</label>
    <type>DateTime</type>
</CustomField>