force-app/main/default/objects/Survey_Responses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Survery_Name__c</columns>
    <columns>Survey_Start_Time__c</columns>
    <columns>Survey_Completion_Time__c</columns>
    <columns>New_Client_Satifaction__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>